--- a/scss/main.scss
+++ b/scss/main.scss
@@ -258,38 +258,41 @@ img {
   transform: translateY(-15%) scale(1.2);
 }
 
-.icon::before,
-.icon::after {
-  opacity: 0;
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  border-radius: 50%;
-}
+.streamer {
 
-.icon::before {
-  content: "\f04b";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  font-size: .65em;
-  background: #f00;
-  display: grid;
-  place-items: center;
-  z-index: 10;
-  transition: opacity 75ms linear, background-color 100ms linear;
-}
+  .icon::before,
+  .icon::after {
+    opacity: 0;
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    border-radius: 50%;
+  }
 
-.icon:hover::before {
-  background: #cc0202;
-}
+  .icon::before {
+    content: "\f04b";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    font-size: .65em;
+    background: #f00;
+    display: grid;
+    place-items: center;
+    z-index: 10;
+    transition: opacity 75ms linear, background-color 100ms linear;
+  }
 
-.icon:hover::after {
-  background: #f00;
-  z-index: 1;
-  animation: pulse 1250ms infinite;
+  .icon:hover::before {
+    background: #cc0202;
+  }
+
+  .icon:hover::after {
+    background: #f00;
+    z-index: 1;
+    animation: pulse 1250ms infinite;
+  }
 }
 
 @keyframes pulse {
